--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap");
+
 .logo {
-    width: 100px;
+  font-family: "Permanent Marker", cursive;
+  font-weight: 500;
+  font-style: normal;
+  
 }
